--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Main Dashboard -->
     <div id="dashboard" class="dashboard active-view">
         <header class="header">
-            <h1>Pro AI Tool kits for Content and Digital Marketing</h1>
+            <h1>Free AI Tool kits for Content and Digital Marketing</h1>
             <p>DMLabsbot - Your collection of AI-powered marketing tools</p>
         </header>
         
